seamless/tests/api_body_compile_tests/08_deserialize_enum_only.rs
use seamless::ApiBody;

#[ApiBody(Deserialize)]
enum Foo {
    Bar { n: usize }
}

fn main() {
    // This should fail to compile because deserialize not implemented
    let f = Foo::Bar{ n: 10 }.to_json_value();
}